<resources>
    <string name="app_name">Story App</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="confirmation_message">Are you sure?</string>
    <string name="login">Login</string>
    <string name="login_page_message">Explore all student experiences and stories while studying at Dicoding</string>
    <string name="welcome">Welcome</string>
    <string name="error_email">Email address is not valid</string>
    <string name="error_password">Password minimum 6 characters</string>
    <string name="register">Register</string>
    <string name="create_account_question">Don\'t have any account?</string>
    <string name="register_title">Create an account</string>
    <string name="register_page_message">Let\'s start writing your story while studying at Dicoding.</string>
    <string name="have_account_question">Already have an account?</string>
    <string name="story_photo">Story Photo</string>
    <string name="error_result">An error occurred,  unable to connect to API.</string>
    <string name="error_occurred">An error has occurred!</string>
    <string name="add_story">Add Story</string>
    <string name="post_new_story_title">Post a new story</string>
    <string name="select_image_from">Select image from</string>
    <string name="write_description">Write description</string>
    <string name="description">Description</string>
    <string name="post_story">Post Story</string>
    <string name="login_failed_message">Login failed, please try again!</string>
    <string name="register_success_message">Registration successful!</string>
    <string name="register_failed_message">Registration failed!</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="choose_picture">Choose a Picture</string>
    <string name="empty_field">Please fill the %s field!</string>
    <string name="empty_field_image">Please select an image!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit">Exit</string>
    <string name="story">%s\'s Story</string>
    <string name="upload_success">Story uploaded successfully!</string>
    <string name="upload_failed">Story failed to upload!</string>
    <string name="map">Map</string>
    <string name="home">Home</string>
    <string name="language_setting">Language Setting</string>
    <string name="retry">Retry</string>
    <string name="share_location">Share location</string>
    <string name="please_active_location_service">Please activate your location service!</string>
</resources>