<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.register.RegisterFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <ImageView
            android:alpha="0"
            android:id="@+id/iv_illustration_register"
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:padding="24dp"
            android:src="@drawable/illustration_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/register" />

        <TextView
            android:alpha="0"
            android:id="@+id/tv_register_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:text="@string/register_title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/primary"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_illustration_register" />

        <TextView
            style="@style/TextSubtitle"
            android:id="@+id/tv_message"
            android:text="@string/register_page_message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_register_title" />

        <TextView
            style="@style/TextLabel"
            android:id="@+id/tv_label_name"
            android:text="@string/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_message" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/EditTextLayout"
            android:id="@+id/edt_name_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_name"
            app:startIconDrawable="@drawable/ic_person">
            <androidx.appcompat.widget.AppCompatEditText
                style="@style/EditText"
                android:id="@+id/edt_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/TextLabel"
            android:id="@+id/tv_label_email"
            android:text="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_name_layout" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/EditTextLayout"
            android:id="@+id/edt_email_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_email"
            app:startIconDrawable="@drawable/ic_email">
            <com.saeware.storyapp.view.EmailEditText
                style="@style/EditText"
                android:id="@+id/edt_email" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/TextLabel"
            android:id="@+id/tv_label_password"
            android:text="@string/password"
            app:layout_constraintBottom_toTopOf="@+id/edt_password_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_email_layout" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/EditTextLayout"
            android:id="@+id/edt_password_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_password"
            app:startIconDrawable="@drawable/ic_lock">
            <com.saeware.storyapp.view.PasswordEditText
                style="@style/EditText"
                android:id="@+id/edt_password" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            style="@style/MainButton"
            android:id="@+id/btn_register"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_password_layout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:alpha="0"
            android:id="@+id/cl_container_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingBottom="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_register">

            <TextView
                style="@style/TextNormal"
                android:id="@+id/tv_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_account_question"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_to_login"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/TextNormal"
                android:id="@+id/btn_to_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/login"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_have_account"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/progress_bar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            android:background="@color/black_transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>