<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.post.PostActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iv_preview_upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:src="@drawable/illustration_upload"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/story_photo" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:paddingBottom="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_preview_upload">

            <TextView
                android:id="@+id/tv_label_choose_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:alpha="0"
                android:text="@string/select_image_from"
                android:textColor="@color/primary"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_container_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_choose_image">
                <Button
                    android:id="@+id/btn_image_from_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0"
                    android:text="@string/camera"
                    android:textAllCaps="false"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
                <Button
                    android:id="@+id/btn_image_from_gallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0"
                    android:layout_marginStart="8dp"
                    android:text="@string/gallery"
                    android:textAllCaps="false"
                    app:layout_constraintStart_toEndOf="@id/btn_image_from_camera"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_label_write_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:alpha="0"
                android:layout_marginTop="8dp"
                android:text="@string/write_description"
                android:textSize="14sp"
                android:textColor="@color/primary"
                android:labelFor="@id/edt_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cl_container_button" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_description_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:alpha="0"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_label_write_description">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:lines="6"
                    android:gravity="top"
                    android:textColor="@color/primary"
                    android:scrollbars="vertical"
                    android:overScrollMode="always"
                    android:scrollbarStyle="insideInset"
                    android:scrollHorizontally="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_upload_post"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:alpha="0"
                android:layout_marginTop="12dp"
                android:padding="10dp"
                android:text="@string/post_story"
                android:textSize="16sp"
                android:textAllCaps="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_description_layout"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/progress_bar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            android:background="@color/black_transparent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>